01-openam-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openam
  name: openam
  namespace: openam
spec:
  clusterIP: None
  ports:
  - port: 8080
  selector:
    app: openam
