03-ingress-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openam-ingress
  namespace: openam
  annotations:
    kubernetes.io/ingress.class: traefik
    #    traefik.frontend.rule.type: PathPrefixStrip
    traefik.frontend.rule.type: PathPrefix
    cert-manager.io/cluster-issuer: letsencrypt-prod
    #cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  rules:
  - host: openam.apps.k8s.cablevision-labs.com.ar
    http:
      paths:
      - backend:
          serviceName: openam
          servicePort: 8080
        path: /
  #add host to DNS first!
  tls:
   - hosts:
     - openam.apps.k8s.cablevision-labs.com.ar
     secretName: openam-cert-letsencrypt-prod
